Update examples to lastest Valhalla implementation